# youtube-auto-sub

./: .gitignore  Cargo.toml  README.md  failures.txt  flake.nix
src/: api.rs  consts.rs  main.rs  tools.rs
src/api/: interfaces.rs  oauth2_service.rs  youtube_repo.rs  youtube_service.rs
src/api/interfaces/: t_oauth2_service.rs  t_youtube_repository.rs  t_youtube_service.rs
src/models/: mod.rs  oath_2.rs  youtube.rs
src/tools/: csv_reader.rs  csv_writer.rs  interfaces.rs
src/tools/interfaces/: t_csv_reader.rs  t_csv_writer.rs
