[package]
name = "youtube-auto-sub"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
csv = "1.3.1"
dotenv = "0.15.0"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
oauth2 = "4.4.2"
anyhow = "1.0"
url = "2.5.3"
